<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetallesEventoActivity">

    <include
        android:id="@+id/toolbardetalles"
        layout="@layout/view_topbardetalles" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbardetalles">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <include
                    android:id="@+id/topBarDetalles"
                    layout="@layout/view_info_completa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_insert_invitation_24px"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="10dp"
                        android:text="@string/fecha_dos_puntos"
                        android:textColor="@color/text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/fecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="10dp"
                        android:text="@string/mi_rcoles_25_de_enero_del_2021"
                        android:textColor="@color/text"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_alarm_24px"
                        android:contentDescription="TODO" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="10dp"
                        android:text="@string/hora_dos_puntos"
                        android:textColor="@color/text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/hora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="10dp"
                        android:text="@string/_4_00_pm_6_00_pm"
                        android:textColor="@color/text"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location_on_24px"
                        android:contentDescription="TODO" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:layout_marginStart="10dp"
                        android:text="@string/lugar"
                        android:textColor="@color/text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/lugar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:maxLines="2"
                        android:layout_marginStart="10dp"
                        android:text="@string/anfiteatro_de_biblioteca"
                        android:textColor="@color/text"
                        android:textSize="18sp" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/descripci_n_del_evento"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/ucab_green"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/roboto"
                    android:maxLines="10"
                    android:text="@string/aqu_va_una_explicac_on_del_evento_detalles_que_no_se_encuentran_en_el_flyer_aqu_va_una_explicac_on_del_evento_detalles_que_no_se_encuentran_en_el_flyer"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>