<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoEventoCompleta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="480dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/flyer"
                android:layout_width="match_parent"
                android:layout_height="295dp"
                android:contentDescription="TODO"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/fondo" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/nombre_del_evento"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/organizado_por"
                    android:textAlignment="textStart"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nombreEncargado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:maxLines="2"
                    android:text="@string/escuela_de_ingenier_a_inform_tica"
                    android:textAlignment="textStart"
                    android:textColor="@color/text"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_black_24dp" />

                <ImageView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_bookmark_24px" />

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:src="@drawable/ic_share_24px" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cantLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/_9_me_gusta"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cantInteresados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/_10_interesados"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>